--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.olcayergun.btAracTespit.ListActivity" />
+        <activity android:name="com.olcayergun.btAracTespit.NextActivity" />
     </application>
 
 
