--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,16 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".kayitlar.ListActivity" />
+        <activity android:name=".MyPreferencesActivity" />
     </application>
 
 </manifest>
+
+<!--
+Connect the device via USB and make sure debugging is working;
+adb tcpip 5555. This makes the device to start listening for connections on port 5555;
+Look up the device IP address with adb shell netcfg or adb shell ifconfig with 6.0 and higher;
+You can disconnect the USB now;
+adb connect <DEVICE_IP_ADDRESS>:5555. This connects to the server we set up on the device on step 2;
+Now you have a device over the network with which you can debug as usual.
+-->
